--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -28,7 +28,7 @@
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html" class="active">Ferramentas</a>
                 <ul class="submenu">
-                    <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
+                    <li><a href="../Templates/ferramentas.html#artefatos" class="active">Artefatos</a></li>
                     <hr>
                     <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
                     <hr>
