--- a/Templates/index.html
+++ b/Templates/index.html
@@ -70,24 +70,24 @@
                 <ul class="comofunciona">
                     <br>
                     <li>
-                    O Produto Owner informa a todos tudo sobre o projeto, explicando
+                    O <strong>Produto Owner</strong> informa a todos tudo sobre o projeto, explicando
                     assim a visão do projeto e criando um documento com a definição
                     de pronto!
                     </li>
                     <br>
                     <li>
-                    2- Com as ações detalhadas, o Product Backlog é definido pelas ordens
+                    2- Com as ações detalhadas, o <strong>Product Backlog</strong> é definido pelas ordens
                     de prioridades do projeto, sendo sempre atualizável e monitorado!
                     </li>
                     <br>
                     <li>
-                    3- As varias etapas do processo são divididas dentro das Sprints
+                    3- As varias etapas do processo são divididas dentro das <strong>Sprints</strong>
                     criadas, cada Sprint tem seu planejamento próprio, para que sejam
                     inspecionadas e concluídas por todo o time!
                     </li>
                     <br>
                     <li>
-                    4- Através de Daily Scrums que são pequenas reuniões diárias o time
+                    4- Através de <strong>Daily Scrum</strong> que são pequenas reuniões diárias o time
                     está sempre atualizado sobre a situação real do projeto, permitindo
                     assim que correções sejam aplicadas caso necessárias!
                     </li>
