--- a/Templates/index.html
+++ b/Templates/index.html
@@ -20,14 +20,18 @@
     <header id="header">
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
-              <a class="logo" href="#">
+              <button class="logo" href="#">
                 <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
-              </a>
-                    <ul>
-                        <li>
-                            
-                        </li>
-                    </ul>
+              </button>
+              <ul class="submenu">
+                <li><a href="../Templates/ferramentas.html#artefatos" class="active">Artefatos</a></li>
+                
+                <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
+                
+                <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
+                
+                <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
+            </ul>
             </div>
         </nav>
         <ul class="principal">
@@ -70,7 +74,7 @@
                 <ul class="comofunciona">
                     <br>
                     <li>
-                    O <strong>Produto Owner</strong> informa a todos tudo sobre o projeto, explicando
+                    1- O <strong>Produto Owner</strong> informa a todos tudo sobre o projeto, explicando
                     assim a visão do projeto e criando um documento com a definição
                     de pronto!
                     </li>
