--- a/Templates/index.html
+++ b/Templates/index.html
@@ -20,18 +20,9 @@
     <header id="header">
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
-              <button class="logo" href="#">
+              <a class="logo" href="#">
                 <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
-              </button>
-              <ul class="submenu">
-                <li><a href="../Templates/ferramentas.html#artefatos" class="active">Artefatos</a></li>
-                
-                <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
-                
-                <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
-                
-                <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
-            </ul>
+              </a>
             </div>
         </nav>
         <ul class="principal">
