acrescentando imagens a pagina html

--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -37,7 +37,7 @@
                 </ul>
             
             </li>
-            <li><a href="../Templates/download.html">Na Prática</a></li>
+            <li><a href="../Templates/na-pratica.html">Na Prática</a></li>
         </ul>
     </header>
 
