--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Luckiest+Guy&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/normalize.css">
     <meta charset="UTF-8">
@@ -38,7 +38,7 @@
                 </ul>
             
             </li>
-            <li><a href="../Templates/download.html">Na Prática</a></li>
+            <li><a href="../Templates/na-pratica.html">Na Prática</a></li>
         </ul>
     </header>
     <br><br><br><br>
@@ -65,10 +65,7 @@
             É uma lista de atividades a serem realizadas durante o Sprint e é construído a partir do Product Backlog, que contém todas as funcionalidades necessárias para o produto. A equipe alinha as prioridades junto ao Product Owner e a percepção de tempo que cada etapa vai consumir. 
             </p>
             <br><br>
-            <h3>Como implementar o Sprint Backlog?</h3>
-            <p>O Sprint Backlog é definido em uma reunião de planejamento, essencial, denominada planning. Durante o Sprint, o Scrum Master facilita as entregas, conduz as reuniões e ajuda a equipe a melhorar a produtividade, e o progresso pode ser acompanhado através do gráfico burndown.</p>
-            <img src="../static/imagens/Sprint backlog.png" alt="sprint backlog">
-            <br><br><br><br><br><br>
+            <img src="../static/imagens/Sprint backlog.png" alt="sprintbacklog">
         </div>
         <div id="burndown">
             <h2>O que é Burndown?</h2>
@@ -101,13 +98,15 @@
             <img src="../static/imagens/burndown.jpg" alt="burndown">      
         </div>
         
-        <a href="../Templates/download.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Prática<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <a href="../Templates/na-pratica.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Prática<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br><br>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </body>
 </html>
