--- a/Templates/index.html
+++ b/Templates/index.html
@@ -42,7 +42,7 @@
                 </ul>
             
             </li>
-            <li><a href="../Templates/download.html">Na Prática</a></li>
+            <li><a href="../Templates/na-pratica.html">Na Prática</a></li>
         </ul>
     </header>
 
