--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -450,8 +450,7 @@ mark,
   list-style: none;
 }
 
-.list-inline-
- {
+.list-inline-item {
   display: inline-block;
 }
 
@@ -5813,7 +5812,11 @@ button.close {
   position: relative;
 }
 
-
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
 
 .carousel-item {
   position: relative;
@@ -5831,9 +5834,7 @@ button.close {
 .carousel-item-next,
 .carousel-item-prev {
   display: block;
-  transition: -webkit-transform 0.6s ease;
-  transition: transform 0.6s ease;
-  transition: transform 0.6s ease, -webkit-transform 0.6s ease;
+
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -5939,17 +5940,17 @@ button.close {
   -ms-flex-align: center;
   align-items: center;
   -ms-flex-pack: center;
-  justify-content: space-between;
-  width: 100%;
-  color: gray;
+  justify-content: center;
+  width: 15%;
+  color: #fff;
   text-align: center;
   opacity: 0.5;
- }
+}
 
 .carousel-control-prev:hover, .carousel-control-prev:focus,
 .carousel-control-next:hover,
 .carousel-control-next:focus {
-  color: gold;
+  color: #fff;
   text-decoration: none;
   outline: 0;
   opacity: .9;
@@ -5991,8 +5992,8 @@ button.close {
   -ms-flex-pack: center;
   justify-content: center;
   padding-left: 0;
-  margin-right: 0%;
-  margin-left: 0%;
+  margin-right: 15%;
+  margin-left: 15%;
   list-style: none;
 }
 
@@ -6006,7 +6007,7 @@ button.close {
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: gray;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .carousel-indicators li::before {
@@ -6035,12 +6036,12 @@ button.close {
 
 .carousel-caption {
   position: absolute;
-  right: 0%;
-  bottom: 0px;
-  left:0%;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
   z-index: 10;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   color: #fff;
   text-align: center;
 }
