--- a/Templates/na-pratica.html
+++ b/Templates/na-pratica.html
@@ -4,13 +4,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Luckiest+Guy&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/normalize.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dowloads</title>
+    <title>Na Pratica</title>
 </head>
 <body class="geral">
     <header id="header">
@@ -41,39 +41,33 @@
             <li><a href="../Templates/na-pratica.html" class="active">Na Prática</a></li>
         </ul>
     </header>
+    <br>
     <div class="sec">
-
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="../static/imagens/1.png " alt="Primeiro Slide">
+            <img class="d-block w-100" src="../static/imagens/sprintbacklog1.PNG" alt="Primeiro Slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="../static/imagens/2.png " alt="Segundo Slide">
+            <img class="d-block w-100" src="../static/imagens/sprintbacklog2.PNG" alt="Segundo Slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="../static/imagens/3.png " alt="Terceiro Slide">
+            <img class="d-block w-100" src="../static/imagens/sprintbacklog3.PNG" alt="Terceiro Slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="../static/imagens/4.png " alt="Terceiro Slide">
+            <img class="d-block w-100" src="../static/imagens/sprintbacklog4.PNG" alt="Terceiro Slide">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Anterior</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Próximo</span>
         </a>
       </div>
-
+    </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
