--- a/Templates/na-pratica.html
+++ b/Templates/na-pratica.html
@@ -43,8 +43,8 @@
     </header>
     <br>
     <div class="sec">
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
+          <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="../static/imagens/sprintbacklog1.PNG" alt="Primeiro Slide">
           </div>
@@ -57,6 +57,10 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="../static/imagens/sprintbacklog4.PNG" alt="Terceiro Slide">
           </div>
+          <div class="carousel-item">
+            <iframe width="700" height="500" src="https://www.youtube.com/embed/tn1IjzmKv14?list=RDCMUChBPl1s9N7ac-2jV7ObmCIQ" title="SPRINT PLANNING | ELEMENTOS BASE DO FRAMEWORK SCRUM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
