--- a/Templates/index.html
+++ b/Templates/index.html
@@ -52,6 +52,9 @@
         
         <a href="#Oqueé" id="btnhome"><ion-icon name="arrow-down-outline"></ion-icon>Navegue pelo Conhecimento<ion-icon name="arrow-down-outline"></ion-icon></a>
     </section>
+
+            
+            
     <div class="sechome">
         <h2 id="Oqueé">O que é?</h2>
         <br><br>
@@ -91,7 +94,34 @@
             
             <a href="../Templates/equipe.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Equipe<ion-icon name="arrow-forward-outline"></ion-icon></a>
             <br><br><br><br><br><br><br><br>
-            <img src="../static/imagens/funcoes.png" alt="equipe">
+            <img src="../static/imagens/funcoes.png" alt="equipe" width="400" height="400">
+
+                <div class="bubbles">
+                    <img src="../static/imagens/bubble.png" alt="bubble1">
+                    <img src="../static/imagens/bubble.png" alt="bubble2">
+                    <img src="../static/imagens/bubble.png" alt="bubble3">
+                    <img src="../static/imagens/bubble.png" alt="bubble4">
+                    <img src="../static/imagens/bubble.png" alt="bubble5">
+                    <img src="../static/imagens/bubble.png" alt="bubble6">
+                    <img src="../static/imagens/bubble.png" alt="bubble7">
+                    <img src="../static/imagens/bubble.png" alt="bubble8">
+                    <img src="../static/imagens/bubble.png" alt="bubble9">
+                    <img src="../static/imagens/bubble.png" alt="bubble10">
+                    <img src="../static/imagens/bubble.png" alt="bubble11">
+                </div>
+
+
+
+
+            <br><br><br><br><br>
+
+                <div id="footerhome">
+            
+                    © 2023 &nbsp Todos Direitos Reservados
+                    <br>
+                    <br>
+                    Produzido por &lt;Code 6 Wave&gt;
+                </div>
     </div>
     <div class=css>
         <style>
@@ -145,12 +175,17 @@
                     background: #143887;
                     color: #fff;
                 }
+                #footerhome{
+                    background: transparent;
+                    color: #fff;
+                }
             </style>
         </div>
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    
+   
+
 
 </body>
 </html>
