--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -56,15 +56,22 @@
         <h2>Adaptação:</h2> <p> Aplica as correções necessárias quando apontadas na etapa de
         inspeção, sempre visando o resultado final esperado! </p>
         <img src="../static/imagens/adaptacao.png" alt="adaptacao" width="400px"  height=400px>
-        <br><br><br><br><br><br><br>
+        <br><br><br>
         
         <a href="../Templates/ferramentas.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Ferramentas<ion-icon name="arrow-forward-outline"></ion-icon></a>
-        <br><br><br><br><br><br><br>  
+        <br><br><br><br><br><br><br>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-    
+    <div id="footer">
+        <br><br><br>
+        © 2023 &nbsp Todos Direitos Reservados
+        <br>
+        <br>
+        Produzido por &lt;Code 6 Wave&gt;
+        <br><br><br>
+    </div>
 </body>
 </html>
