--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,6 @@ body
     align-items: center;
     font-size: 25px;
     z-index: 10000;
-   
     opacity: 1;
 }
 #header .logo
@@ -190,10 +189,6 @@ section #text span
     margin-left: 10%;
     margin-right: 10%;
 }
-
-#agua{
-
-}
 .comofunciona{
     font-size: 2em;
     color: #fff;
@@ -287,4 +282,77 @@ button{
     width: 100%;
     margin: auto;
   }
+#footer{
+    text-align: center;
+    background: #143887;
+    color: #fff;
+}
+.bubbles img{
+    width: 50px;
+    animation: bubble 6s linear infinite;
+}
+.bubbles{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+}
+@keyframes bubble{
+    0%{
+        transform: translateY(0);
+        opacity: 0;
+    }
+    20%{
+       
+        opacity: 0.5;
+    }
+    70%{
+        
+        opacity: 0.5;
+    }
+    90%{
+        transform: translateY(-280vh);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(-280vh);
+        opacity: 0;
+    }
+}
+.bubbles img:nth-child(1){
+    animation-delay: 2s;
+}
+.bubbles img:nth-child(2){
+    animation-delay: 1s;
+}
+.bubbles img:nth-child(3){
+    animation-delay: 3s;
+}
+.bubbles img:nth-child(4){
+    animation-delay: 4.5s;
+}
+.bubbles img:nth-child(5){
+    animation-delay: 6s;
+}
+.bubbles img:nth-child(6){
+    animation-delay: 3.5s;
+}
+.bubbles img:nth-child(7){
+    animation-delay: 7s;
+}
+.bubbles img:nth-child(8){
+    animation-delay: 4s;
+}
+.bubbles img:nth-child(9){
+    animation-delay: 7.5s;
+}
+.bubbles img:nth-child(10){
+    animation-delay: 1.5s;
+}
+.bubbles img:nth-child(11){
+    animation-delay: 1s;
+}
+
 
