--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -48,27 +48,36 @@
         <p>Dono do projeto e líder do processo como um todo,
         toma as decisões e avalia os recursos, ele também define o esperado de
         cada membro e o objetivo do projeto!</p>
-        <img src="../static/imagens/productowner.png" alt="productowner">
-        <br><br><br><br><br><br><br>
+        <img src="../static/imagens/productowner.png" alt="productowner" width="800" height="600">
+        <br><br><br><br><br>
         <h2>Scrum Master:</h2> 
         <p>Auxilia a equipe na solução de problemas, por conhecer
         bem sobre o funcionamento do Scrum é uma função importantíssima
         dentro do projeto afastando tudo aquilo que pode atrapalhar o
         desenvolvimento das sprints do projeto!</p>
-        <img src="../static/imagens/scrummaster.png" alt="scrummaster">
-        <br><br><br><br><br><br><br>
+        <img src="../static/imagens/scrummaster.png" alt="scrummaster" width="500" height="500">
+        <br><br><br><br><br>
         <h2>Time Scrum:</h2> 
         <p>São todos aqueles que desenvolvem o projeto, atuando em
         colaboração e sempre se autogerenciando a respeito de atividades e
         metas do projeto!</p>
-        <img src="../static/imagens/equipescrum.png" alt="time" width="900" height="600">
+        <img src="../static/imagens/scrumteam.png" alt="time" width="700" height="500">
 
         <a href="../Templates/pilares.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
-        <br><br><br><br><br><br><br><br>
+        <br><br><br><br><br>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+    <div id="footer">
+        <br><br><br>
+        © 2023 &nbsp Todos Direitos Reservados
+        <br>
+        <br>
+        Produzido por &lt;Code 6 Wave&gt;
+        <br><br><br>
+    </div>
+    
 </body>
 </html>
