--- a/Templates/na-pratica.html
+++ b/Templates/na-pratica.html
@@ -43,7 +43,40 @@
     </header>
     <br>
     <div class="sec">
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
+
+      <!-- backlog -->
+      <h1>Como Gerenciar o Backlog</h1>
+      <div id="carouselBacklog" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="../static/imagens/ProductBacklog Fluxograma.JPG" alt="Primeiro Slide">
+        </div>
+       
+        <div class="carousel-item">
+          <iframe width="784" height="390" src="https://www.youtube.com/embed/BLX-wtpQfdw" title="Gerenciamento de Backlog" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="carousel-item">
+          <iframe width="784" height="441" src="https://www.youtube.com/embed/MpNVGkI2RD4" title="Aula 12 - User Stories" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        
+      </div>
+      <a class="carousel-control-prev" href="#carouselBacklog" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselBacklog" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+      </a>
+      </div>
+    </div>
+    
+      <br>
+      <!-- sprint backlog -->
+      
+    <div class="sec">
+      <h1>Sprint Planing</h1>
+      <div id="carouselSprint" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
           <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="../static/imagens/sprintbacklog1.PNG" alt="Primeiro Slide">
@@ -60,18 +93,68 @@
           <div class="carousel-item">
             <iframe width="700" height="500" src="https://www.youtube.com/embed/tn1IjzmKv14?list=RDCMUChBPl1s9N7ac-2jV7ObmCIQ" title="SPRINT PLANNING | ELEMENTOS BASE DO FRAMEWORK SCRUM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
-          
+         
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselSprint" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Anterior</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselSprint" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Próximo</span>
         </a>
       </div>
     </div>
+
+    <!-- burndown -->
+    <div class="sec">
+      <h1>Gerenciamento do Burndown</h1>
+         <div id="carouselburndown" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="../static/imagens/Diagrama burndown.png" alt="Primeiro Slide">
+        </div>
+       
+        <div class="carousel-item">
+          <iframe width="784" height="400" src="https://www.youtube.com/embed/5qiN9fQi8lc" title="Aula 17 - Burn Down" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        
+      </div>
+      <a class="carousel-control-prev" href="#carouselburndown" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselburndown" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+      </a>
+      </div>
+    </div>
+    <!-- Daily scrum-->
+    <div class="sec">
+      <h1>Daily Scrum</h1>
+      <div id="carouseldaily" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
+     <div class="carousel-inner">
+     <div class="carousel-item active">
+       <img class="d-block w-100" src="../static/imagens/Daily Scrum - Diagrama.png" alt="Primeiro Slide">
+     </div>
+    
+     <div class="carousel-item">
+      <iframe width="784" height="300" src="https://www.youtube.com/embed/-YMkThxPdc4" title="O que é uma Daily Scrum? Entenda a importância dessa reunião!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     </div>
+     
+   </div>
+   <a class="carousel-control-prev" href="#carouseldaily" role="button" data-slide="prev">
+     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+     <span class="sr-only">Anterior</span>
+   </a>
+   <a class="carousel-control-next" href="#carouseldaily" role="button" data-slide="next">
+     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <span class="sr-only">Próximo</span>
+   </a>
+   </div>
+ </div>
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
