--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Luckiest+Guy&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/normalize.css">
     <meta charset="UTF-8">
@@ -29,7 +27,7 @@
             <li><a href="../Templates/pilares.html">Pilares</a></li>
             <li><a href="../Templates/ferramentas.html" class="active">Ferramentas</a>
                 <ul class="submenu">
-                    <li><a href="../Templates/ferramentas.html#artefatos" class="active">Artefatos</a></li>
+                    <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
                     <hr>
                     <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
                     <hr>
@@ -37,7 +35,7 @@
                     <hr>
                     <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
                 </ul>
-
+            
             </li>
             <li><a href="../Templates/na-pratica.html">Na Prática</a></li>
         </ul>
@@ -101,6 +99,17 @@
         <a href="../Templates/na-pratica.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Prática<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br><br>
     </div>
+
+        <div id="footer">
+            <br><br><br>
+            © 2023 &nbsp Todos Direitos Reservados
+            <br>
+            <br>
+            Produzido por &lt;Code 6 Wave&gt;
+            <br><br><br>
+        </div>
+
+
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
