--- a/Templates/index.html
+++ b/Templates/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <section>
-        <img src="../static/imagens/agua.jpg" id="agua" alt="aguafundo">
+        <img src="../static/imagens/agua.jpg" alt="aguafundo">
         <h2 id="text"><span>Metodologia</span><br><a>Scrum</a></h2>
         
         <a href="#Oqueé" id="btnhome"><ion-icon name="arrow-down-outline"></ion-icon>Navegue pelo Conhecimento<ion-icon name="arrow-down-outline"></ion-icon></a>
