--- a/Templates/na-pratica.html
+++ b/Templates/na-pratica.html
@@ -13,39 +13,39 @@
     <title>Na Pratica</title>
 </head>
 <body class="geral">
-    <header id="header">
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="logo" href="#">
-                <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
-              </a>
-            </div>
-        </nav>
-        <ul class="principal">
-            <li><a href="../Templates/index.html">Home</a></li>
-            <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
-            <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
-            <li><a href="../Templates/pilares.html">Pilares</a></li>
-            <li><a href="../Templates/ferramentas.html">Ferramentas</a>
-                <ul class="submenu">
-                    <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
-                    <hr>
-                    <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
-                    <hr>
-                    <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
-                    <hr>
-                    <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
-                </ul>
-            
-            </li>
-            <li><a href="../Templates/na-pratica.html" class="active">Na Prática</a></li>
-        </ul>
-    </header>
+  <header id="header">
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="logo" href="#">
+            <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
+          </a>
+        </div>
+    </nav>
+    <ul class="principal">
+        <li><a href="../Templates/index.html">Home</a></li>
+        <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
+        <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
+        <li><a href="../Templates/pilares.html">Pilares</a></li>
+        <li><a href="../Templates/ferramentas.html">Ferramentas</a>
+            <ul class="submenu">
+                <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
+                <hr>
+                <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
+                <hr>
+                <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
+                <hr>
+                <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
+            </ul>
+        
+        </li>
+        <li><a href="../Templates/na-pratica.html" class="active">Na Prática</a></li>
+    </ul>
+</header>
     <br>
     <div class="sec">
-
+      <br><br><br><br>
       <!-- backlog -->
-      <h1>Como Gerenciar o Backlog</h1>
+      <h2>Como Gerenciar o Backlog</h2>
       <div id="carouselBacklog" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
         <div class="carousel-inner">
         <div class="carousel-item active">
@@ -71,11 +71,10 @@
       </div>
     </div>
     
-      <br>
       <!-- sprint backlog -->
       
     <div class="sec">
-      <h1>Sprint Planing</h1>
+      <h2>Sprint Planing</h2>
       <div id="carouselSprint" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
           <div class="carousel-inner">
           <div class="carousel-item active">
@@ -108,52 +107,61 @@
 
     <!-- burndown -->
     <div class="sec">
-      <h1>Gerenciamento do Burndown</h1>
-         <div id="carouselburndown" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="../static/imagens/Diagrama burndown.png" alt="Primeiro Slide">
-        </div>
-       
-        <div class="carousel-item">
-          <iframe width="784" height="400" src="https://www.youtube.com/embed/5qiN9fQi8lc" title="Aula 17 - Burn Down" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
+        <h2>Gerenciamento do Burndown</h2>
+          <div id="carouselburndown" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
+          <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="../static/imagens/Diagrama burndown.png" alt="Primeiro Slide">
+          </div>
         
+          <div class="carousel-item">
+            <iframe width="784" height="400" src="https://www.youtube.com/embed/5qiN9fQi8lc" title="Aula 17 - Burn Down" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          
+        </div>
+        <a class="carousel-control-prev" href="#carouselburndown" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselburndown" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Próximo</span>
+        </a>
+        </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselburndown" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselburndown" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-      </a>
+      <!-- Daily scrum-->
+      <div class="sec">
+        <h2>Daily Scrum</h2>
+        <div id="carouseldaily" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
+      <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="../static/imagens/Daily Scrum - Diagrama.png" alt="Primeiro Slide">
       </div>
+      
+      <div class="carousel-item">
+        <iframe width="784" height="300" src="https://www.youtube.com/embed/-YMkThxPdc4" title="O que é uma Daily Scrum? Entenda a importância dessa reunião!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      
     </div>
-    <!-- Daily scrum-->
-    <div class="sec">
-      <h1>Daily Scrum</h1>
-      <div id="carouseldaily" class="carousel slide carousel-fade" data-ride="carousel" data-interval="0" >
-     <div class="carousel-inner">
-     <div class="carousel-item active">
-       <img class="d-block w-100" src="../static/imagens/Daily Scrum - Diagrama.png" alt="Primeiro Slide">
-     </div>
-    
-     <div class="carousel-item">
-      <iframe width="784" height="300" src="https://www.youtube.com/embed/-YMkThxPdc4" title="O que é uma Daily Scrum? Entenda a importância dessa reunião!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-     </div>
-     
-   </div>
-   <a class="carousel-control-prev" href="#carouseldaily" role="button" data-slide="prev">
-     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-     <span class="sr-only">Anterior</span>
-   </a>
-   <a class="carousel-control-next" href="#carouseldaily" role="button" data-slide="next">
-     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-     <span class="sr-only">Próximo</span>
-   </a>
-   </div>
+    <a class="carousel-control-prev" href="#carouseldaily" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouseldaily" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Próximo</span>
+    </a>
+    </div>
  </div>
+
+  <div id="footer">
+    <br><br><br>
+    © 2023 &nbsp Todos Direitos Reservados
+    <br>
+    <br>
+    Produzido por &lt;Code 6 Wave&gt;
+    <br><br><br>
+  </div>  
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
