implementação do flask

--- a/Templates/napratica.html
+++ b/Templates/napratica.html
@@ -22,23 +22,23 @@
         </div>
     </nav>
     <ul class="principal">
-        <li><a href="../Templates/index.html">Home</a></li>
-        <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
-        <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
-        <li><a href="../Templates/pilares.html">Pilares</a></li>
-        <li><a href="../Templates/ferramentas.html">Ferramentas</a>
+        <li><a href="/">Home</a></li>
+        <li><a href="/#Oqueé">O que é?</a></li>
+        <li><a href="/equipe">Equipe Scrum</a></li>
+        <li><a href="/pilares">Pilares</a></li>
+        <li><a href="/ferramentas">Ferramentas</a>
             <ul class="submenu">
-                <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
+                <li><a href="/ferramentas#artefatos">Artefatos</a></li>
                 <hr>
-                <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
+                <li><a href="/ferramentas#backlog">Backlog do Produto</a></li>
                 <hr>
-                <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
+                <li><a href="/ferramentas#sprintbacklog">Sprint Backlog</a></li>
                 <hr>
-                <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
+                <li><a href="/ferramentas#burndown">Burndown</a></li>
             </ul>
         
         </li>
-        <li><a href="../Templates/na-pratica.html" class="active">Na Prática</a></li>
+        <li><a href="/napratica" class="active">Na Prática</a></li>
     </ul>
 </header>
     <br>
