--- a/Templates/ferramentas.html
+++ b/Templates/ferramentas.html
@@ -13,7 +13,7 @@
 </head>
 <body class="geral">
     <header id="header">
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar fixed-top bg-body-tertiary">
             <div class="container-fluid">
               <a class="logo" href="#">
                 <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
@@ -21,23 +21,23 @@
             </div>
         </nav>
         <ul class="principal">
-            <li><a href="../Templates/index.html">Home</a></li>
-            <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
-            <li><a href="../Templates/equipe.html">Equipe Scrum</a></li>
-            <li><a href="../Templates/pilares.html">Pilares</a></li>
-            <li><a href="../Templates/ferramentas.html" class="active">Ferramentas</a>
+            <li><a href="/">Home</a></li>
+            <li><a href="/#Oqueé">O que é?</a></li>
+            <li><a href="equipe">Equipe Scrum</a></li>
+            <li><a href="/pilares">Pilares</a></li>
+            <li><a href="/ferramentas" class="active">Ferramentas</a>
                 <ul class="submenu">
-                    <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
+                    <li><a href="/ferramentas#artefatos">Artefatos</a></li>
                     <hr>
-                    <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
+                    <li><a href="/ferramentas#backlog">Backlog do Produto</a></li>
                     <hr>
-                    <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
+                    <li><a href="/ferramentas#sprintbacklog">Sprint Backlog</a></li>
                     <hr>
-                    <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
+                    <li><a href="/ferramentas#burndown">Burndown</a></li>
                 </ul>
             
             </li>
-            <li><a href="../Templates/na-pratica.html">Na Prática</a></li>
+            <li><a href="/napratica">Na Prática</a></li>
         </ul>
     </header>
     <br><br><br><br>
@@ -96,7 +96,7 @@
             <img src="../static/imagens/burndown.jpg" alt="burndown">      
         </div>
 
-        <a href="../Templates/na-pratica.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Prática<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <a href="/napratica" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Prática<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br><br><br><br>
     </div>
 
