--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -14,7 +14,7 @@
 </head>
 <body class="geral">
     <header id="header">
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar fixed-top bg-body-tertiary">
             <div class="container-fluid">
               <a class="logo" href="#">
                 <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
@@ -22,23 +22,23 @@
             </div>
         </nav>
         <ul class="principal">
-            <li><a href="../Templates/index.html">Home</a></li>
-            <li><a href="../Templates/index.html#Oqueé">O que é?</a></li>
-            <li><a href="../Templates/equipe.html" class="active">Equipe Scrum</a></li>
-            <li><a href="../Templates/pilares.html">Pilares</a></li>
-            <li><a href="../Templates/ferramentas.html">Ferramentas</a>
+            <li><a href="/">Home</a></li>
+            <li><a href="/index#Oqueé">O que é?</a></li>
+            <li><a href="/equipe" class="active">Equipe Scrum</a></li>
+            <li><a href="/pilares">Pilares</a></li>
+            <li><a href="/ferramentas">Ferramentas</a>
                 <ul class="submenu">
-                    <li><a href="../Templates/ferramentas.html#artefatos">Artefatos</a></li>
+                    <li><a href="/ferramentas#artefatos">Artefatos</a></li>
                     <hr>
-                    <li><a href="../Templates/ferramentas.html#backlog">Backlog do Produto</a></li>
+                    <li><a href="/ferramentas#backlog">Backlog do Produto</a></li>
                     <hr>
-                    <li><a href="../Templates/ferramentas.html#sprintbacklog">Sprint Backlog</a></li>
+                    <li><a href="/ferramentas#sprintbacklog">Sprint Backlog</a></li>
                     <hr>
-                    <li><a href="../Templates/ferramentas.html#burndown">Burndown</a></li>
+                    <li><a href="/ferramentas#burndown">Burndown</a></li>
                 </ul>
             
             </li>
-            <li><a href="../Templates/na-pratica.html">Na Prática</a></li>
+            <li><a href="/napratica">Na Prática</a></li>
         </ul>
     </header>
 
@@ -63,7 +63,7 @@
         metas do projeto!</p>
         <img src="../static/imagens/scrumteam.png" alt="time" width="700" height="500">
         <br>
-        <a href="../Templates/pilares.html" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
+        <a href="/pilares" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br>
     </div>
 
