--- a/Templates/napratica.html
+++ b/Templates/napratica.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../static/css/style1.css">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/normalize.css">
     <link rel="stylesheet" href="../static/css/bootstrap.css">
@@ -13,11 +14,62 @@
     <title>Na Pratica</title>
 </head>
 <body class="geral">
+  <div class="navigation">
+    <div class="menuToggle"></div>
+        <ul>
+            <li class="list">
+              <a href="/" style="--clr:#FF3B3F;">
+                  <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                  <span class="text">Home</span>
+              </a>
+          </li>
+          <li class="list">
+              <a href="/equipe" style="--clr:#FF3B3F;">
+                  <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
+                  <span class="text">Equipe Scrum</span>
+              </a>
+          </li>
+          <li class="list">
+              <a href="/pilares" style="--clr:#FF3B3F;">
+                  <span class="icon"><ion-icon name="podium-outline"></ion-icon></span>
+                  <span class="text">Pilares</span>
+              </a>
+          </li>
+          <li class="list">
+              <a href="/ferramentas" style="--clr:#FF3B3F;">
+                  <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                  <span class="text">Ferramentas</span>
+              </a>
+          </li>
+          <li class="list active">
+              <a href="/napratica" style="--clr:#FF3B3F;">
+                  <span class="icon"><ion-icon name="eye-outline"></ion-icon></span>
+                  <span class="text">Na Prática</span>
+              </a>
+          </li>
+        </ul>
+</div>
+<script>
+    let menuToggle = document.querySelector('.menuToggle');
+    let navigation = document.querySelector('.navigation');
+    menuToggle.onclick = function(){
+        navigation.classList.toggle('active')
+    }
+
+    let list = document.querySelectorAll('.list');
+    function activeLink(){
+        list.forEach((item) =>
+        item.classList.remove('active'));
+        this.classList.add('active');
+    }
+    list.forEach((item) =>
+    item.addEventListener('click',activeLink));
+</script>
   <header id="header">
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
           <a class="logo" href="#">
-            <ion-icon name="home"></ion-icon>&nbsp&nbspEasy Scrum
+            Easy Scrum
           </a>
         </div>
     </nav>
