--- a/static/css/style1.css
+++ b/static/css/style1.css
@@ -5,16 +5,19 @@
     font-family: 'Poppins', sans-serif;
 }
 :root{
-    --bg: #2f323f;
+    --bg: #fff;
 }
 body{
+    z-index: 1001;
     min-height: 100vh;
     background: var(--bg);
 }
 .navigation{
+    z-index: 1001;
+    border-radius: 10px;
     position: fixed;
     inset: 40px 0 40px 20px;
-    background: #fff;
+    background: #143887;
     width: 75px;
     display: flex;
     justify-content: center;
@@ -25,13 +28,14 @@ body{
     width: 250px;
 }
 .menuToggle{
+    z-index: 1001;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 60px;
     padding: 0 23px;
-    border-bottom: 1px solid rgba(0,0,0,0.25);
+    border-bottom: 1px solid #fff;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -42,7 +46,7 @@ body{
     position: absolute;
     width: 30px;
     height: 2px;
-    background: #333;
+    background: #fff;
     transform: translateY(-8px);
     transition: 0.5s;
 }
@@ -54,12 +58,135 @@ body{
     position: absolute;
     width: 30px;
     height: 2px;
-    background: #333;
+    background: #fff;
     transform: translateY(8px);
-    box-shadow: 0 -8px 0 #333;
+    box-shadow: 0 -8px 0 #fff;
     transition: 0.5s;
 }
 .navigation.active .menuToggle::after{
     transform: translateY(0) rotate(-45deg);
-    box-shadow: 0 0 0 #333;
+    box-shadow: 0 0 0 #fff;
+}
+.navigation ul{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.navigation ul li{
+    list-style: none;
+    position: relative;
+    width: 100%;
+    height: 76px;
+    border-radius: 12px;
+    border: 8px solid transparent;
+    transition: 0.5s;
+}
+.navigation ul li.active{
+    transform: translateX(30px);
+    background: var(--bg);
+}
+.navigation ul li::before{
+    content: '';
+    position: absolute;
+    top: -28px;
+    right: -10px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-bottom-right-radius: 20px;
+    box-shadow: 6px 5px 0 5px var(--bg);
+    transform: scale(0);
+    transform-origin: bottom right;
+    transition: 0.5s;
+}
+.navigation ul li.active::before{
+    right: 22px;
+    transform: scale(1);
+}
+.navigation ul li::after{
+    content: '';
+    position: absolute;
+    bottom: -28px;
+    right: -10px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-right-radius: 20px;
+    box-shadow: 6px -3px 0 3px var(--bg);
+    transform: scale(0);
+    transform-origin: bottom right;
+    transition: 0.5s;
+}
+.navigation ul li.active::after{
+    right: 22px;
+    transform: scale(1);
+}
+.navigation ul li a{
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    z-index: 1001;
+}
+.navigation ul li a .icon{
+    color: #fff;
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    font-size: 1.75em;
+    line-height: 60px;
+    border: 6px solid transparent;
+    transition: 0.5s;
+}
+.navigation ul li.active a .icon{
+    color: #fff;
+    background: var(--clr);
+}
+.navigation ul li a .icon::before{
+    content: '';
+    position: absolute;
+    top: 12px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--clr);
+    filter: blur(8px);
+    opacity: 0;
+    transition: 0.5s;
+}
+.navigation ul li.active a .icon::before{
+    opacity: 0.5;
+}
+.navigation ul li a .icon::after{
+    content: '';
+    position: absolute;
+    left: -60px;
+    width: 15px;
+    height: 15px;
+    background: var(--clr);
+    border: 8px solid var(--bg);
+    border-radius: 50%;
+}
+.navigation ul li a .text{
+    position: relative;
+    padding: 0 15px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    height: 60px;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+}
+.navigation.active ul li a .text{
+    visibility: visible;
+    opacity: 1;
+}
+.navigation ul li.active a .text{
+    color: #fff;
 }
