--- a/Templates/pilares.html
+++ b/Templates/pilares.html
@@ -108,10 +108,15 @@
         <h2>Adaptação:</h2> <p> Aplica as correções necessárias quando apontadas na etapa de
         inspeção, sempre visando o resultado final esperado! </p>
         <img src="../static/imagens/adaptacao.png" alt="adaptacao" width="400px"  height=400px>
+        <br><br><br><br><br>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fBgDusWDCcA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
         <br><br><br>
-        
         <a href="/ferramentas" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Ferramentas<ion-icon name="arrow-forward-outline"></ion-icon></a>
-        <br><br><br><br><br><br><br>
+        <br><br><br><br><br><br>
+    
+
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
