--- a/templates/equipe.html
+++ b/templates/equipe.html
@@ -113,7 +113,11 @@
         colaboração e sempre se autogerenciando a respeito de atividades e
         metas do projeto!</p>
         <img src="../static/imagens/scrumteam.png" alt="time" width="700" height="500">
-        <br>
+        <br><br><br><br>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jkCGCVBpmcE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        <br><br><br><br>
         <a href="/pilares" id="btn"><ion-icon name="arrow-forward-outline"></ion-icon>Flutue para a Pilares<ion-icon name="arrow-forward-outline"></ion-icon></a>
         <br><br><br><br><br>
     </div>
